Owner Product Completed.

--- a/hybridpos-Frontend/src/app/mycomponents/owner-page/products/products.css
+++ b/hybridpos-Frontend/src/app/mycomponents/owner-page/products/products.css
@@ -16,3 +16,15 @@ label {
 input {
   padding: 6px;
 }
+.delete-btn {
+  background: red;
+  color: white;
+  border: none;
+  padding: 4px 8px;
+  cursor: pointer;
+  border-radius: 4px;
+}
+
+.delete-btn:hover {
+  background: darkred;
+}
